[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://BadBots.tscn" type="PackedScene" id=2]
[ext_resource path="res://LilFlicker.tscn" type="PackedScene" id=3]
[ext_resource path="res://Floor.tscn" type="PackedScene" id=4]
[ext_resource path="res://Switch.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.2805, 15.2946 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
BadBots = ExtResource( 2 )

[node name="LilFlicker" parent="." instance=ExtResource( 3 )]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 200.749, 620.916 )

[node name="StaticBody2D" parent="." instance=ExtResource( 4 )]

[node name="Switch" parent="." instance=ExtResource( 5 )]
position = Vector2( 53.0736, 14.6651 )

[node name="Area2D2" type="Area2D" parent="Switch"]
position = Vector2( 27.6932, 571.783 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Switch/Area2D2"]
position = Vector2( 3.29309, 1.74341 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="body_entered" from="Switch/Area2D2" to="." method="_on_Area2D2_body_entered"]
